Added left bar social btns
The left bar and color change

--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
         <div class="nav-wrapper">
@@ -27,15 +26,16 @@
                 </div>
             </div>
         </div>
+    
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
-                    <img src="images/profile.jpg" alt="">
+                    <img src="images/profile pic.png" alt="Profile Picture">
                 </div>
 
                 <div class="profile-content-wrapper">
                     <h1>Hi, thank you for visiting my site</h1>
-                    <p1> My name is Javier Lopez, I'm a senior student at Florida International University. I love building things both in the real world 
+                    <p1> My name is Javier Lopez, I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from Florida International University. I love building things both in the real world 
                         and in the digital one. You can connect with me using the links bellow:</p1>
                         
                         <div class="social-bar">
