Fixed boxes and hover
Fixed boxes and hover

--- a/about.html
+++ b/about.html
@@ -34,9 +34,8 @@
                 </div>
 
                 <div class="profile-content-wrapper">
-                    <h1>Hi, thank you for visiting my site</h1>
-                    <p1> My name is Javier Lopez, I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from Florida International University. I love building things both in the real world 
-                        and in the digital one. You can connect with me using the links bellow:</p1>
+                    <h1>Thank you for visiting my site</h1>
+                    <p1>I hope you enjoyed my projects. I'm really passionate about creating things in the real world and in the digital one. If you enjoyed what you found here or only want to extend your network. Feel free reach out using the links bellow. Until then, happy browsing!</p1>
                         
                         <div class="social-bar">
                             <a class="social-btn" href="mailto:javierlopezg93@gmail.com">
@@ -49,7 +48,6 @@
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </div>
-                   <p2>Happy browsing</p2>
                 </div>
             </div>
         </div>
