--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="intro1">Hi there, my name is</div>
             <div class="intro2">Javier Lopez</div>
             <div class="intro3">I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from Florida International University. I love building things both in the real world 
-                and in the digital one. Currently I'm focused on RPA development as part of <p class="hover-underline-animation"><a href="https://www2.deloitte.com/us/en.html" target="_blank" rel="noopener noreferrer">Deloitte</a></p>.</div>
+                and in the digital one. If you want to extend your network feel free to add me in LinkedIn using the link on the bottom left. Currently I'm focused on RPA development as part of <p class="hover-underline-animation"><a href="https://www2.deloitte.com/us/en.html" target="_blank" rel="noopener noreferrer">Deloitte</a></p>.</div>
         </div>    
         <div class="projects-intro">
             <p1>Here you can find some of my projects</p1>
