Fixed mobile view

--- a/index.html
+++ b/index.html
@@ -2,16 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Javier Lopez Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Javier Lopez</title>
     <link rel="icon" href="images/logos/jllogo.png" type="image/icon type">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 <body>
+     <!--<nav class="navbar"> -->
+        <div class="nav-wrapper">
+            <nav class="navbar">
+                <!-- LOGO -->
+                <div class="logo"><img class="logo-image" src="images/profile_logo.jpg" alt="logo image"></div>
+                <!-- NAVIGATION MENU -->
+                <ul class="nav-links">
+                    <!-- USING CHECKBOX HACK -->
+                    <input type="checkbox" id="checkbox_toggle" />
+                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <!-- NAVIGATION MENUS -->
+                    <div class="menu">
+                        <li><a href="#top">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </div>
     <div class="container">
-            <div class="nav-wrapper">
-                <div class="left-side">
+                <!-- <div class="left-side">
                     <div class="nav-link-wrapper"> 
                         <a href="#top">Home</a>
                     </div>
@@ -24,7 +45,7 @@
                     <div class="nav-link-wrapper">
                         <a href="#contact">Contact</a>                
                     </div>
-                </div>
+                </div> -->
             </div>  
         <div orientation= "left" class = "contact-links-left-bar">
             <div class="social-bar-left-index">
@@ -34,7 +55,7 @@
                 <a class="social-btn" href="https://github.com/The-Javier-Lopez">
                     <i class="fab fa-github"></i>
                 </a>
-                <a class="social-btn" href="https://www.linkedin.com/in/javier-l%C3%B3pez-30466a197/">
+                <a class="social-btn" href="https://www.linkedin.com/in/javier-lopez-30466a197">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
