--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-wrapper">
             <nav class="navbar">
                 <!-- LOGO -->
-                <div class="logo"><img class="logo-image" src="images/profile_logo.jpg" alt="logo image"></div>
+                <div class="logo"></div>
                 <!-- NAVIGATION MENU -->
                 <ul class="nav-links">
                     <!-- USING CHECKBOX HACK -->
@@ -31,22 +31,6 @@
                 </ul>
             </nav>
         </div>
-    <div class="container">
-                <!-- <div class="left-side">
-                    <div class="nav-link-wrapper"> 
-                        <a href="#top">Home</a>
-                    </div>
-                    <div class="nav-link-wrapper">
-                        <a href="#about">About</a>                
-                    </div>
-                    <div class="nav-link-wrapper">
-                        <a href="#projects">Projects</a>                
-                    </div>
-                    <div class="nav-link-wrapper">
-                        <a href="#contact">Contact</a>                
-                    </div>
-                </div> -->
-            </div>  
         <div orientation= "left" class = "contact-links-left-bar">
             <div class="social-bar-left-index">
                 <a class="social-btn" href="mailto:javierlopezg93@gmail.com">
@@ -65,7 +49,7 @@
             <div class="intro1">Hi there, my name is</div>
             <div class="intro2">Javier Lopez</div>
             <div class="intro3">I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from Florida International University. I love building things both in the real world 
-                and in the digital one. If you want to extend your network feel free to add me in LinkedIn using the link on the bottom left. Currently I'm focused on RPA development as part of <p class="hover-underline-animation"><a href="https://www2.deloitte.com/us/en.html" target="_blank" rel="noopener noreferrer">Deloitte</a></p>.</div>
+                and in the digital one. If you want to extend your network feel free to add me in LinkedIn using the link on the bottom left. Currently I'm focused on RPA development as part of <p class="hover-underline-animation"><a href="https://www2.deloitte.com/us/en.html" target="_blank" rel="noopener noreferrer">Deloitte</a></p></div>
         </div>    
         <div class="projects-intro" id="projects">
             <p1>Here you can find some of my projects</p1>
@@ -149,17 +133,14 @@
                 </div>
             </div>     
         </div>
-        
-        <div class="content-wrapper" id="contact">
-            <div class="two-column-wrapper">
-                <div class="profile-image-wrapper">
-                    <img src="images/profile pic.png" alt="Profile Picture">
-                </div>
+        <div class="two-column-wrapper" id="contact">
+            <div class="profile-image-wrapper">
+                <img src="images/profile pic.png" alt="Profile Picture">
+            </div>
 
-                <div class="profile-content-wrapper">
-                    <h1>Thank you for visiting my site</h1>
-                    <p1>I hope you found my work interesting, if you enjoyed what you found here or only want to extend your network. Feel free reach out using the links on the <p class="hover-underline-animation">left</p>. Until then, happy browsing!</p1>
-                </div>
+            <div class="profile-content-wrapper">
+                <h1>Thank you for visiting my site</h1>
+                <p1>I hope you found my work interesting, if you enjoyed what you found here or only want to extend your network. Feel free reach out using the links on the <p class="hover-underline-animation">left</p>. Until then, happy browsing!</p1>
             </div>
         </div>
     </div>    
