--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>     
         </div>
-        <div class="two-column-wrapper">
+        <div class="two-column-wrapper" id="contact">
                 <div class="profile-image-wrapper">
                     <img src="images/profile pic.png" alt="Profile Picture">
                 </div>
