--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="info-wrapper" id="about">
             <div class="intro1">Hi there, my name is</div>
             <div class="intro2">Javier Lopez</div>
-            <div class="intro3">I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from Florida International University. I love building things both in the real world 
+            <div class="intro3">I'm a Full-Stack Software Developer with a Bachelor's Degree in Computer Science from <p class="hover-underline-animation"><a href="https://www.fiu.edu" target="_blank" rel="noopener noreferrer">Florida International University</a></p>. I love building things both in the real world 
                 and in the digital one. If you want to extend your network feel free to add me in LinkedIn using the link on the bottom left. Currently I'm focused on RPA development as part of <p class="hover-underline-animation"><a href="https://www2.deloitte.com/us/en.html" target="_blank" rel="noopener noreferrer">Deloitte</a></p></div>
 
         </div>    
